Kubernetes/podsidekiq/networkpolictysidekiq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sidekiq-network-policy-001
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.0.16/32
    ports:
      - protocol: TCP
        port: 6379
